--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
 
     <string name="app_name">Maintenance</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="buttonListeMaintenances">Liste des maintenances</string>
+    <string name="title_activity_liste_maintenances">Liste des maintenances</string>
+    <string name="buttonQuitter">Quitter</string>
 
 </resources>
